umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@ammonia.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C3v
order: 6
equivalence_sets:
  - - N(0)
  - - H(1)
    - H(2)
    - H(3)
