umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_1_2_dibromo_1_2_dichloroethane_staggered.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: Ci
order: 2
equivalence_sets:
  - - C(0)
    - C(1)
  - - H(2)
    - H(3)
  - - Br(4)
    - Br(5)
  - - Cl(6)
    - Cl(7)
