umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_1_2_dichloroethylene_trans.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C2h
order: 4
equivalence_sets:
  - - C(0)
    - C(1)
  - - H(2)
    - H(3)
  - - Cl(4)
    - Cl(5)
