umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_1_3_5_7_tetrachlorocyclooctatetraene.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: S4
order: 4
equivalence_sets:
  - - C(0)
    - C(1)
    - C(2)
    - C(3)
  - - C(4)
    - C(5)
    - C(6)
    - C(7)
  - - Cl(8)
    - H(9)
    - H(10)
    - Cl(11)
  - - H(12)
    - Cl(13)
    - H(14)
    - Cl(15)
