umol-geometric/tests/perception/snapshots/perception__perception_suite__run_perception_test@constructor_1_3_5_trihydroxybenzene.snap
---
source: umol-geometric/tests/perception/mod.rs
expression: result
---
point_group: C3h
order: 6
equivalence_sets:
  - - C(0)
    - C(1)
    - C(2)
  - - C(3)
    - C(4)
    - C(5)
  - - O(6)
    - O(7)
    - O(8)
  - - H(9)
    - H(10)
    - H(11)
  - - H(12)
    - H(13)
    - H(14)
